--- a/testindex.html
+++ b/testindex.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
-<style>
-ul.tree {
-    list-style-type: none;
-    padding-left: 5px;
-}
-ul.tree ul {
-    margin-left: 5px;
-}
-ul.tree li {
-    line-height: 1;
-    margin: 0;
-    padding: 1px 0;
-    position: relative;
-}
-.folder, .file {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-}
-.subfolders {
-    display: none;
-}
-.show {
-    display: block;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        ul.tree {
+            list-style-type: none;
+            padding-left: 5px;
+        }
+        ul.tree ul {
+            margin-left: 5px;
+        }
+        ul.tree li {
+            line-height: 1;
+            margin: 0;
+            padding: 1px 0;
+            position: relative;
+        }
+        .folder, .file {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 3px;
+        }
+        .subfolders {
+            display: none;
+        }
+        .show {
+            display: block;
+        }
+        .bi-folder, .bi-file-earmark {
+            font-size: 1em;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <h1>Directory Tree</h1>
     <ul id="tree" class="tree">
     {% for folder in immediate_subfolders %}
-    <li>
-        <span class="folder" data-path="{{ folder }}">
-            <i class="bi bi-folder"></i>
-            {{ folder }}
-        </span>
-        <ul class="subfolders collapse"></ul>
-    </li>
+        <li>
+            <span class="folder" data-path="{{ folder }}">
+                <i class="bi bi-folder"></i>
+                {{ folder }}
+            </span>
+            <ul class="subfolders collapse"></ul>
+        </li>
     {% endfor %}
     </ul>
+    <h2>File Content</h2>
+    <div id="content-display"></div>
+    <h2>File Details</h2>
+    <div id="file-details"></div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
@@ -77,6 +84,28 @@ $(document).ready(function(){
         }
     });
 
+    $('body').on('click', '.file', function(event){
+        event.stopPropagation();
+        var filePath = $(this).data('path');
+        $.ajax({
+            url: '/files/' + filePath,
+            success: function(data) {
+                if (data.mime_type.startsWith('text')) {
+                    $('#content-display').html('<pre>' + data.content + '</pre>');
+                } else if (data.mime_type.startsWith('image')) {
+                    $('#content-display').html('<img src="data:' + data.mime_type + ';base64,' + data.content + '" style="max-width: 100%; height: auto;">');
+                } else {
+                    $('#content-display').html('Unsupported file type for display.');
+                }
+                $('#file-details').html('MIME type: ' + data.mime_type);
+            },
+            error: function(xhr) {
+                $('#content-display').html('Error loading file.');
+                $('#file-details').html('');
+            }
+        });
+    });
+
     function renderSubfoldersAndFiles($list, data, basePath) {
         var subfolders = data.subfolders;
         var files = data.files;
@@ -85,8 +114,9 @@ $(document).ready(function(){
             $list.append('<li><span class="folder" data-path="' + fullPath + '"><i class="bi bi-folder"></i> ' + folder + '</span><ul class="subfolders collapse"></ul></li>');
         });
         files.forEach(function(file) {
+            var fullPath = basePath + '/' + file;
             var iconClass = getFileIcon(file);
-            $list.append('<li><span class="file"><i class="' + iconClass + '"></i> ' + file + '</span></li>');
+            $list.append('<li><span class="file" data-path="' + fullPath + '"><i class="' + iconClass + '"></i> ' + file + '</span></li>');
         });
     }
 
@@ -94,26 +124,26 @@ $(document).ready(function(){
         var extension = filename.split('.').pop().toLowerCase();
         switch(extension) {
             case 'pdf':
-                return 'bi bi-filetype-pdf';
+                return 'bi bi-file-earmark-pdf';
             case 'doc':
             case 'docx':
-                return 'bi bi-filetype-doc';
+                return 'bi bi-file-earmark-word';
             case 'xls':
             case 'xlsx':
-                return 'bi bi-filetype-xls';
+                return 'bi bi-file-earmark-excel';
             case 'txt':
-                return 'bi bi-filetype-text';
+                return 'bi bi-file-earmark-text';
             case 'jpg':
             case 'jpeg':
-                return 'bi bi-filetype-jpg';
+                return 'bi bi-file-earmark-image';
             case 'png':
-                return 'bi bi-filetype-png';
+                return 'bi bi-file-earmark-image';
             case 'zip':
-                return 'bi bi-filetype-zip';
+                return 'bi bi-file-earmark-zip';
             case 'mp3':
-                return 'bi bi-filetype-mp3';
+                return 'bi bi-file-earmark-music';
             case 'mp4':
-                return 'bi bi-filetype-mp4';
+                return 'bi bi-file-earmark-play';
             default:
                 return 'bi bi-file-earmark';
         }
