--- a/testindex.html
+++ b/testindex.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>File Explorer</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
     <style>
@@ -50,105 +51,88 @@
         </li>
     {% endfor %}
     </ul>
-    <h2>File Content</h2>
-    <div id="content-display"></div>
-    <h2>File Details</h2>
-    <div id="file-details"></div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
-$(document).ready(function(){
-    $('body').on('click', '.folder', function(event){
-        event.stopPropagation();
-        var $this = $(this);
-        var folderPath = $this.data('path');
-        var $subfolderList = $this.next('.subfolders');
+    $(document).ready(function(){
+        $('body').on('click', '.folder', function(event){
+            event.stopPropagation();
+            var $this = $(this);
+            var folderPath = $this.data('path');
+            var $subfolderList = $this.next('.subfolders');
 
-        if (!$subfolderList.hasClass('loaded')) {
-            $.ajax({
-                url: '/subfolders',
-                type: 'POST',
-                contentType: 'application/json',
-                data: JSON.stringify({ path: folderPath }),
-                success: function(data) {
-                    $subfolderList.empty();
-                    renderSubfoldersAndFiles($subfolderList, data, folderPath);
-                    $subfolderList.addClass('loaded show');
-                },
-                error: function(xhr, status, error) {
-                    console.error('Error requesting subfolders:', error);
-                }
-            });
-        } else {
-            $subfolderList.toggleClass('show');
-        }
-    });
-
-    $('body').on('click', '.file', function(event){
-        event.stopPropagation();
-        var filePath = $(this).data('path');
-        $.ajax({
-            url: '/files/' + filePath,
-            success: function(data) {
-                if (data.mime_type.startsWith('text')) {
-                    $('#content-display').html('<pre>' + data.content + '</pre>');
-                } else if (data.mime_type.startsWith('image')) {
-                    $('#content-display').html('<img src="data:' + data.mime_type + ';base64,' + data.content + '" style="max-width: 100%; height: auto;">');
-                } else {
-                    $('#content-display').html('Unsupported file type for display.');
-                }
-                $('#file-details').html('MIME type: ' + data.mime_type);
-            },
-            error: function(xhr) {
-                $('#content-display').html('Error loading file.');
-                $('#file-details').html('');
+            if (!$subfolderList.hasClass('loaded')) {
+                $.ajax({
+                    url: '/subfolders',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ path: folderPath }),
+                    success: function(data) {
+                        $subfolderList.empty();
+                        renderSubfoldersAndFiles($subfolderList, data, folderPath);
+                        $subfolderList.addClass('loaded show');
+                    },
+                    error: function(xhr, status, error) {
+                        console.error('Error requesting subfolders:', error);
+                    }
+                });
+            } else {
+                $subfolderList.toggleClass('show');
             }
         });
-    });
 
-    function renderSubfoldersAndFiles($list, data, basePath) {
-        var subfolders = data.subfolders;
-        var files = data.files;
-        subfolders.forEach(function(folder) {
-            var fullPath = basePath + '/' + folder;
-            $list.append('<li><span class="folder" data-path="' + fullPath + '"><i class="bi bi-folder"></i> ' + folder + '</span><ul class="subfolders collapse"></ul></li>');
+        $('body').on('click', '.file', function(event){
+            event.stopPropagation();
+            var filePath = $(this).data('path');
+            var downloadUrl = '/files/' + filePath;
+            var newTabUrl = '/newtab';
+            window.open(newTabUrl, '_blank'); // Open a new tab
+            window.location.href = downloadUrl; // Download the file
         });
-        files.forEach(function(file) {
-            var fullPath = basePath + '/' + file;
-            var iconClass = getFileIcon(file);
-            $list.append('<li><span class="file" data-path="' + fullPath + '"><i class="' + iconClass + '"></i> ' + file + '</span></li>');
-        });
-    }
 
-    function getFileIcon(filename) {
-        var extension = filename.split('.').pop().toLowerCase();
-        switch(extension) {
-            case 'pdf':
-                return 'bi bi-file-earmark-pdf';
-            case 'doc':
-            case 'docx':
-                return 'bi bi-file-earmark-word';
-            case 'xls':
-            case 'xlsx':
-                return 'bi bi-file-earmark-excel';
-            case 'txt':
-                return 'bi bi-file-earmark-text';
-            case 'jpg':
-            case 'jpeg':
-                return 'bi bi-file-earmark-image';
-            case 'png':
-                return 'bi bi-file-earmark-image';
-            case 'zip':
-                return 'bi bi-file-earmark-zip';
-            case 'mp3':
-                return 'bi bi-file-earmark-music';
-            case 'mp4':
-                return 'bi bi-file-earmark-play';
-            default:
-                return 'bi bi-file-earmark';
+        function renderSubfoldersAndFiles($list, data, basePath) {
+            var subfolders = data.subfolders;
+            var files = data.files;
+            subfolders.forEach(function(folder) {
+                var fullPath = basePath + '/' + folder;
+                $list.append('<li><span class="folder" data-path="' + fullPath + '"><i class="bi bi-folder"></i> ' + folder + '</span><ul class="subfolders collapse"></ul></li>');
+            });
+            files.forEach(function(file) {
+                var fullPath = basePath + '/' + file;
+                var iconClass = getFileIcon(file);
+                $list.append('<li><span class="file" data-path="' + fullPath + '"><i class="' + iconClass + '"></i> ' + file + '</span></li>');
+            });
         }
-    }
-});
+
+        function getFileIcon(filename) {
+            var extension = filename.split('.').pop().toLowerCase();
+            switch(extension) {
+                case 'pdf':
+                    return 'bi bi-file-earmark-pdf';
+                case 'doc':
+                case 'docx':
+                    return 'bi bi-file-earmark-word';
+                case 'xls':
+                case 'xlsx':
+                    return 'bi bi-file-earmark-excel';
+                case 'txt':
+                    return 'bi bi-file-earmark-text';
+                case 'jpg':
+                case 'jpeg':
+                    return 'bi bi-file-earmark-image';
+                case 'png':
+                    return 'bi bi-file-earmark-image';
+                case 'zip':
+                    return 'bi bi-file-earmark-zip';
+                case 'mp3':
+                    return 'bi bi-file-earmark-music';
+                case 'mp4':
+                    return 'bi bi-file-earmark-play';
+                default:
+                    return 'bi bi-file-earmark';
+            }
+        }
+    });
 </script>
 </body>
 </html>
