--- a/testindex.html
+++ b/testindex.html
@@ -35,6 +35,27 @@
         .bi-folder, .bi-file-earmark {
             font-size: 1em;
         }
+        .info-box {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .info-box iframe {
+            width: 100%;
+            height: 800px; /* Larger height for better visibility */
+            border: none;
+        }
+        .info-box img {
+            width: 100%;
+            max-height: 600px; /* Ensure images fit well */
+            border: none;
+            object-fit: contain;
+        }
+        .info-box pre {
+            white-space: pre-wrap; /* Ensure long lines wrap */
+            word-wrap: break-word; /* Ensure long words break */
+        }
     </style>
 </head>
 <body>
@@ -51,6 +72,12 @@
         </li>
     {% endfor %}
     </ul>
+    <div id="infoBox" class="info-box" style="display:none;">
+        <h5 id="fileTitle">Dateiansicht</h5>
+        <iframe id="fileContentFrame" src="" style="display:none;"></iframe>
+        <img id="fileContentImage" src="" style="display:none;">
+        <pre id="fileContentText" style="display:none;"></pre>
+    </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
@@ -84,10 +111,30 @@
         $('body').on('click', '.file', function(event){
             event.stopPropagation();
             var filePath = $(this).data('path');
-            var downloadUrl = '/files/' + filePath;
             var viewFileUrl = '/viewfile/' + filePath;
-            window.open(viewFileUrl, '_blank'); // Open a new tab to view file content
-            window.location.href = downloadUrl; // Download the file
+            var fileName = filePath.split('/').pop();
+
+            // Check the file extension to determine if it's an image, PDF, or text file
+            var extension = fileName.split('.').pop().toLowerCase();
+            if (['jpg', 'jpeg', 'png', 'gif', 'bmp'].includes(extension)) {
+                $('#fileContentImage').attr('src', viewFileUrl).show();
+                $('#fileContentFrame').hide();
+                $('#fileContentText').hide();
+            } else if (extension === 'pdf') {
+                $('#fileContentFrame').attr('src', viewFileUrl).show();
+                $('#fileContentImage').hide();
+                $('#fileContentText').hide();
+            } else {
+                $.get(viewFileUrl, function(data) {
+                    $('#fileContentText').text(data).show();
+                    $('#fileContentFrame').hide();
+                    $('#fileContentImage').hide();
+                });
+            }
+            $('#fileTitle').text(fileName);
+
+            // Show the info box
+            $('#infoBox').show();
         });
 
         function renderSubfoldersAndFiles($list, data, basePath) {
@@ -116,7 +163,10 @@
                 case 'xlsx':
                     return 'bi bi-file-earmark-excel';
                 case 'txt':
-                    return 'bi bi-file-earmark-text';
+                case 'js':
+                case 'json':
+                case 'md':
+                    return 'bi bi-file-earmark-code';
                 case 'jpg':
                 case 'jpeg':
                     return 'bi bi-file-earmark-image';
@@ -128,6 +178,12 @@
                     return 'bi bi-file-earmark-music';
                 case 'mp4':
                     return 'bi bi-file-earmark-play';
+                case 'css':
+                    return 'bi bi-file-earmark-code';
+                case 'py':
+                    return 'bi bi-file-earmark-code';
+                case 'pptm':
+                    return 'bi bi-file-earmark-richtext';
                 default:
                     return 'bi bi-file-earmark';
             }
